import ag grid styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <h1>AG Grid Practice</h1>
-<ag-grid-angular [rowData]="rowData" [columnDefs]="colDefs"></ag-grid-angular>
+<ag-grid-angular
+  class="ag-theme-alpine"
+  [rowData]="rowData"
+  [columnDefs]="colDefs"
+></ag-grid-angular>
