--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
+@use "../node_modules/ag-grid-community/styles/ag-grid.css";
+@use "../node_modules/ag-grid-community/styles/ag-theme-alpine.css";
+
 :root {
   * {
     margin: 0;
