add ag grid styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>AG Grid Practice</h1>
 <ag-grid-angular
-  class="ag-theme-alpine"
+  class="ag-theme-alpine-dark"
   [rowData]="rowData"
   [columnDefs]="colDefs"
 ></ag-grid-angular>
