--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,20 @@
 @use "/src/variables" as *;
 
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   background-color: $dark-cyan;
   color: $white;
 
   h1 {
     text-align: center;
-    padding-top: 5rem;
+    padding: 5rem 0;
+  }
+
+  ag-grid-angular {
+    align-self: center;
+    height: 500px;
+    width: 600px;
   }
 }
