add default coldef

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
   class="ag-theme-alpine-dark"
   [rowData]="rowData$ | async"
   [columnDefs]="colDefs"
+  [defaultColDef]="defaultColDef"
 ></ag-grid-angular>
